letter spacing fix

--- a/static/main.css
+++ b/static/main.css
@@ -1082,6 +1082,7 @@ p {
   /* Overwrite default */
   outline: none;
   -webkit-appearance: none;
+  letter-spacing: 0;
 }
 input.button:hover {
   cursor: pointer;
